--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -33,6 +33,7 @@ r.AntiAliasingMethod=4
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/Main.Main
 GameDefaultMap=/Game/Levels/Main.Main
+GlobalDefaultGameMode=/Game/ProductConfig/Blueprints/BP_ConfigGameMode.BP_ConfigGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
