--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,8 +32,18 @@ r.AntiAliasingMethod=4
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/Main.Main
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/Main.Main
-GlobalDefaultGameMode=/Game/ProductConfig/Blueprints/BP_ConfigGameMode.BP_ConfigGameMode_C
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
