--- a/ProductConfigurator.uproject
+++ b/ProductConfigurator.uproject
@@ -15,6 +15,16 @@
 		{
 			"Name": "PixelStreaming",
 			"Enabled": true
+		},
+		{
+			"Name": "OpenXR",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Linux",
+				"Android",
+				"VisionOS"
+			]
 		}
 	],
 	"TargetPlatforms": [
